--- a/components/CustomDesigns/BubbleDisplay/bubbleDisplay.module.css
+++ b/components/CustomDesigns/BubbleDisplay/bubbleDisplay.module.css
@@ -16,6 +16,7 @@
     background-attachment: fixed;
     position: relative;
     overflow: hidden;
+    z-index: 15;
 }
 
 .bubbleDisplayAnimation{
