--- a/components/InformationDisplay/Section/section.module.css
+++ b/components/InformationDisplay/Section/section.module.css
@@ -3,7 +3,7 @@
 
 .sectionContainer{
     position: relative;
-    padding: 4em 0 7em 0;
+    padding:0;
     background-color: rgba(15, 15, 15, 1);
     z-index: 3;
 }
@@ -104,7 +104,7 @@ h4.textHeader{
 
 .shapeDividerLayer1 {
     position: absolute;
-    top: calc(100% - 1px);
+    top: calc(100% - 2px);
     left: 0;
     width: 100%;
     transform: rotate(180deg);
@@ -121,9 +121,8 @@ h4.textHeader{
 }
 
 .shapeDivider{
-    position: absolute;
-    left: 0;
-    z-index: 10;
+    position: relative;
+    z-index: 20;
     width: 100%;
 }
 
